--- a/core/res/res/values/dimens.xml
+++ b/core/res/res/values/dimens.xml
@@ -256,4 +256,17 @@
 
     <!-- Padding surrounding each widget page -->
     <dimen name="kg_widget_page_padding">10dp</dimen>
+
+    <!-- Size of the clock font in keyguard's status view -->
+    <dimen name="kg_status_clock_font_size">94dp</dimen>
+
+    <!-- Size of the date font in keyguard's status view  -->
+    <dimen name="kg_status_date_font_size">24dp</dimen>
+
+    <!-- Size of the generic status lines keyguard's status view  -->
+    <dimen name="kg_status_line_font_size">12sp</dimen>
+
+    <!-- Size of margin on the right of keyguard's status view -->
+    <dimen name="kg_status_line_font_right_margin">32dp</dimen>
+
 </resources>
