Return carrier label to notification panel.
If it makes you feel any better, it was there all along...

Bug: 7027535
Change-Id: Ib1add55f1bfe1958e15fa6a2960a821ccfb9d949

--- a/packages/SystemUI/res/layout/status_bar_expanded.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded.xml
@@ -33,6 +33,8 @@
         layout="@layout/carrier_label"
         android:layout_height="@dimen/carrier_label_height"
         android:layout_width="match_parent"
+        android:layout_marginBottom="@dimen/close_handle_height"
+        android:layout_gravity="bottom"
         />
 
     <LinearLayout
