--- a/packages/SystemUI/res/values-sw600dp/dimens.xml
+++ b/packages/SystemUI/res/values-sw600dp/dimens.xml
@@ -40,4 +40,8 @@
     <!-- Size of application thumbnail -->
     <dimen name="status_bar_recents_thumbnail_width">200dp</dimen>
     <dimen name="status_bar_recents_thumbnail_height">177dp</dimen>
+
+    <!-- On tablet-sized devices, we allocate the rightmost third(ish) of the draggable status bar
+         to quick settings. -->
+    <item type="dimen" name="settings_panel_dragzone_fraction">35%</item>
 </resources>
