Improvements to notification/settings panels:
A) Hide icons corresponding to the active panel with a
   downward push animation. Notes:
   1. this animation will now apply any time the status bar
	  icons are disabled via DISABLE_NOTIFICATION_ICONS.
   2. DISABLE_SYSTEM_INFO will now only hide the right hand
      icons (system status icons, battery, clock). But you
	  weren't using it anyway, right?

B) Stop pulling down the panels in response to just a touch
   on the status bar. (That should never have worked.) In
   general, we now require that a fling proceed more than
   10dp to be treated as a fling with velocity (as opposed
   to a v=0 fling, or "let-go").

C) If a panel is pulled down more than halfway and then let
   go with v=0, it is expanded. If less than halfway, it is
   contracted. (Helps fix B) above, plus it just makes good
   sense.)

Bug: 7211541 (A)
Bug: 7227237 (B)
Bug: 7228541 (B)
Change-Id: I5662269b753376804bf629239835dc212716d5c3

--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -107,6 +107,9 @@
     <!-- Cap on overall resulting fling speed (s^-1) -->
     <dimen name="fling_gesture_max_output_velocity">3000dp</dimen>
 
+    <!-- Minimum distance a fling must travel (anti-jitter) -->
+    <dimen name="fling_gesture_min_dist">10dp</dimen>
+
     <!-- Minimum fraction of the display a gesture must travel, at any velocity, to qualify as a
          collapse request -->
     <item type="dimen" name="collapse_min_display_fraction">10%</item>
